@@ -4,12 +4,12 @@ where
 -- version number is major.minor.patchlvl; don't change the format of the
 -- `versnum' line as it is `grep'ed for by a Makefile
 --
-idstr      = "$Id: BaseVersion.hs,v 1.34 2002/01/06 08:34:44 chak Exp $"
+idstr      = "$Id: BaseVersion.hs,v 1.35 2002/02/10 13:34:26 chak Exp $"
 name       = "Compiler Toolkit"
-versnum    = "0.22.5"
-date	   = "6 Jan 2002"
+versnum    = "0.23.0"
+date	   = "10 Feb 2002"
 version    = name ++ ", version " ++ versnum ++ ", " ++ date
-copyright  = "Copyright (c) [1995..2002] Manuel M. T. Chakravarty"
+copyright  = "Copyright (c) [1995..2002] Manuel M T Chakravarty"
 disclaimer = "This software is distributed under the \
 	     \terms of the GNU Public Licence.\n\
 	     \NO WARRANTY WHATSOEVER IS PROVIDED. \
