@@ -1,0 +1,21 @@
+[Package
+    {name = "base",
+     import_dirs = ["../../base/admin",
+		    "../../base/errors",
+		    "../../base/general",
+		    "../../base/graphs",
+		    "../../base/state",
+		    "../../base/syms",
+		    "../../base/syntax",
+		    "../../base/sysdep"],
+     source_dirs = [],
+     library_dirs = [],
+     hs_libraries = [],
+     extra_libraries = [],
+     include_dirs = [],
+     c_includes = [],
+     package_deps = [],
+     extra_ghc_opts = [],
+     extra_cc_opts = [],
+     extra_ld_opts = []},
+]
