@@ -81,5 +81,6 @@ Michael Weber		 <michael.weber@Post.RWTH-Aachen.DE>
 
 Thanks for comments and suggestions to 
 
+Jan Kort		 <kort@science.uva.nl>
 Simon Marlow		 <simonmar@microsoft.com>
 Sven Panne		 <Sven.Panne@informatik.uni-muenchen.de>.
