@@ -2,12 +2,12 @@
 #  ============================================================================
 #  C -> Haskell Compiler: configuration makefile 
 #
-#  Author : Manuel M. T. Chakravarty
+#  Author : Manuel M T Chakravarty
 #  Created: 9 April 2000
 #
-#  Version $Revision: 1.3 $ from $Date: 2001/02/04 12:27:38 $
+#  Version $Revision: 1.4 $ from $Date: 2002/02/10 13:34:27 $
 #
-#  Copyright (c) 2000 Manuel M. T. Chakravarty
+#  Copyright (c) [2000..2002] Manuel M T Chakravarty
 #
 #  This file is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -24,6 +24,20 @@
 # Configuration-dependent definitions for the make process of C->HS
 #
 
+# *nix tools
+#
+GREP	= @GREP@
+MKDIR	= @MKDIR@
+MV	= @MV@
+
+# lib settings
+
 LIB_HCFLAGS=@LIB_HCFLAGS@
 
 LEGACY_FFI=@LEGACY_FFI@
+
+# Installation options
+#
+# * `== yes' when enabled
+#
+ENABLE_ADD_PACKAGE = @ENABLE_ADD_PACKAGE@
