@@ -1,5 +1,5 @@
 dnl CTK - Compiler Toolkit
-dnl Copyright (c) [1999..2001] Manuel M. T. Chakravarty <chak@cse.unsw.edu.au>
+dnl Copyright (c) [1999..2002] Manuel M T Chakravarty <chak@cse.unsw.edu.au>
 dnl 
 dnl This library is free software; you can redistribute it and/or
 dnl modify it under the terms of the GNU Library General Public
@@ -35,7 +35,7 @@ AC_CONFIG_SUBDIRS(idl2chs)
 dnl Where are we?
 TOP=`pwd`
 
-dnl Check whether to enable profiling support.
+dnl Select whether to enable profiling support.
 AC_ARG_ENABLE(prof,
 	      [  --enable-prof           enable profiling support],
 	      [ENABLE_PROF=$enableval])
@@ -43,6 +43,11 @@ if test x$ENABLE_PROF = xyes; then
 dnl  PROF="-prof -auto"
   PROF="-prof"
 fi
+
+dnl Select whether to use --add-package during installation.
+AC_ARG_ENABLE(add_package,
+	      [  --enable-add-package    register package during installation],
+	      [ENABLE_ADD_PACKAGE=$enableval])
 
 dnl Select a specific Haskell compiler and/or flags.
 AC_ARG_WITH(hc, 
@@ -94,12 +99,12 @@ dnl if lndir understands -silent, use it
 dnl (greps through the usage info - not very nice...)
 $LNDIR 2>&1 | grep silent >/dev/null && LNDIR="$LNDIR -silent"
 
-dnl Haskell compiler; currently ghc 4.02 upwards & nhc98 1.0
+dnl Haskell compiler; currently ghc 4.08 upwards & nhc98 1.0
 dnl (The next command is not executed, if $HC is already set.)
 AC_PATH_PROGS(HC, ghc nhc98)
 if test -z "$HC"; then
  AC_MSG_ERROR([Could not find a Haskell compiler!
-Currently supported are ghc 4.02 upwards & nhc98 1.0.
+Currently supported are ghc 4.08 upwards & nhc98 1.0.
 ** Check \"http://haskell.org\". **])
 fi
 dnl The following can happen if a wrong --with-hc=HC option is given.
@@ -118,8 +123,8 @@ if test $hc_base = ghc; then
   dnl set GHC, as this is what the following command inspects
   GHC=$HC
   CTK_GHC_VERSION(hc_vers,hc_maj_vers,hc_min_vers,hc_pl)
-  CTK_PROG_CHECK_VERSION($hc_vers, -lt, 4.02, [
-    AC_MSG_ERROR([We need to have version 4.02 upwards of ghc!
+  CTK_PROG_CHECK_VERSION($hc_vers, -lt, 4.08, [
+    AC_MSG_ERROR([We need to have version 4.08 upwards of ghc!
 ** Check \"http://haskell.org\". **])])
   dnl Determine compilation system identifier and option for adding .hi 
   dnl directories.
@@ -155,28 +160,21 @@ if test -z "$HCFLAGS"; then
     HCFLAGS="$HCFLAGS -recomp -fno-warn-incomplete-patterns"
   fi
   if test $ghc_native = yes; then
-    CTK_PROG_CHECK_VERSION($hc_vers, -lt, 4.06, [
-      AC_MSG_ERROR([For the option --with-ghc-native, you need version 4.07 upwards of ghc!])])
-    case "$target" in
-      i?86-*-linux-gnu) HCFLAGS="$HCFLAGS -fasm-x86";;
-      *) AC_MSG_ERROR([The option --with-ghc-native is only supported on the x86 architecture.]);;
-    esac
+    HCFLAGS="$HCFLAGS -fasm"
   fi
 fi
 
 dnl System-specific flags that may not be omitted.
 dnl
-dnl ghc: The system libraries `lang' (formerly, `exts') and `posix' are
-dnl      required by `sysdep/SysDepGHC3.hs' and `sysdep/SysDepGHC4.hs', and 
+dnl ghc: The system libraries `lang' and `posix' are required by 
+dnl      `sysdep/SysDepGHC3.hs' and `sysdep/SysDepGHC4.hs', and 
 dnl      thus, transitively for the compilation of some other modules. 
 dnl
 dnl Notes: 
 dnl - We can't use `posix' in a CygWin environment.
-dnl - When we give up compatibility with ghc versions earlier than 4.08, 
-dnl   `-syslib' flags can be replaced by `-package'
 dnl
 if test -z "$CYGWIN"; then
-  SYSPOSIX="-syslib posix"
+  SYSPOSIX="-package posix"
   POSIX_FEATURE=posix
 else
   SYSPOSIX=""
@@ -185,7 +183,7 @@ fi
 if test $hc_base = ghc; then
   dnl Check in which system library we find the module IOExts.
   CTK_LIB_SYSLIB(IOExts, lang exts)
-  HCSYSFLAGS="-syslib $syslib_IOExts $SYSPOSIX"
+  HCSYSFLAGS="-package $syslib_IOExts $SYSPOSIX"
   SYSFEATURES="$SYSFEATURES $POSIX_FEATURE"
 fi
 if test $SYS = nhc1; then
@@ -226,9 +224,13 @@ AC_SUBST(HIDIROPT)
 AC_SUBST(PROF)
 AC_SUBST(MKDEPENDHS)
 AC_SUBST(SYSFEATURES)
+AC_SUBST(ENABLE_ADD_PACKAGE)
 
 dnl write the results...
-AC_OUTPUT(mk/config.mk)
+AC_OUTPUT([
+  mk/config.mk
+  base/base.build.config
+])
 
 dnl ...and chat with the user
 echo "********************************************"
