@@ -1,3 +1,7 @@
+2002-02-06  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
+
+	* configure.in: probe for `grep'
+
 2002-02-05  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
 
 	* aclocal.m4 (CTK_GHC_VERSION): no \+ in sed on Solaris
